# bioinf

./: CMakeLists.txt  LICENSE  README.md
benchmark/: benchmark_main.cpp  fasta_parser.cpp  fasta_parser.h  kmer_extractor.cpp  kmer_extractor.h  memory_util.cpp  memory_util.h  synthetic_gen.cpp  synthetic_gen.h  timer.h
results/: ecoli.csv  reference_ecoli.csv  reference_synthetic.csv  synthetic.csv
scripts/: compare.py  plot_results.py  run_ecoli.sh  run_reference.sh  run_synthetic.sh
src/: bamboo_filter.cpp  bamboo_filter.h  hash.cpp  hash.h  segment.cpp  segment.h
test/: test_bamboo.cpp  test_fasta.cpp  test_kmer.cpp  test_segment.cpp
